   4.1 servers (bug #30603)
 - Fixed problem with pooling code where connections pooled from the pool were added
   twice to the in use pool.  This would cause a semaphore full exception
   when an attempt is made to release them back to the pool (bug #36688)
 - Reversed order of Datetime and DateTime enums for MySqlDbType so that VB users won't get
   autocorrection to Datetime (bug #37406)

Version 5.1.6 - 5/7/08
 - Fixed problem where parameters lists were not showing when you tried to alter a routine 
   in server explorer.  (bug #34359)
 - Fixed a problem in procedure cache where it was possible to get into a race condition
   and cause a memory leak (bug #34338)
 - Fixed problem where attempting to use an isolation level other than the default with
   a transaction scope would use the default instead (bug #34448)
 - Fixed problem that causes the TableAdapter wizard to only generate insert statements.
   The problem was that our code to retrieve index columns was broken. (bug #31338)
 - Fixed problem with connections staying open after being used with SqlDataSource.
   The problem was that we were not returning an enumerator for our reader with the
   closeReader option set to true when we were supposed to.  (Bug #34460)
 - Fixed problem where the bit data type would continue to return null values
   once it saw a null value in a previous row (bug #36313)      
 - Fixed problem with MembershipUser.GetPassword where attempting to retrieve a
   password on a user where password Q&A is not required would throw an exception (bug #36159)      
 - Fixed a problem with MembershipUser.GetNumberOfUsersOnline.  
   It actually works now  :) (bug #36157)
 - Fixed documentation that still stated that setting port to -1 was necessary for
   a named pipe connection (bug #35356)      
 - Fixed data type processing so that geometry fields are returned as binary.  (bug #36081)      
 - Fixed problem that kept our provider from showing up in the provider list when configuring